# Nyx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
Nyx/: main.py
Nyx/assets/: dashboard.html
Nyx/commands/: ai.py  doctor.py  monitor.py  notes.py  organize.py  run.py  scan.py  serve.py  stats.py  update.py  watch.py
Nyx/services/: ai_service.py  scanner_service.py
Nyx/utils/: ai_utils.py  db.py  formatters.py
